--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,4 +6,14 @@
 
 body {
   font-family: sans-serif;
+
+  /* input[type="number"]::-webkit-outer-spin-button,
+  input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  } */
+
+  /* input[type="number"] {
+    -moz-appearance: textfield;
+  } */
 }
